--- a/index.html
+++ b/index.html
@@ -109,5 +109,37 @@
         // Initialize stats on load
         updateStats();
     </script>
+    <!-- Floating Hub Button Snippet -->
+    <style>
+        #hub-bubble {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            z-index: 1000;
+            width: 56px;
+            height: 56px;
+            background-color: #0ea5e9; /* sky-500 */
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+            transition: transform 0.2s ease-in-out, background-color 0.2s ease-in-out;
+        }
+        #hub-bubble:hover {
+            transform: scale(1.1);
+            background-color: #0284c7; /* sky-600 */
+        }
+    </style>
+    
+    <a href="https://muhammadhassaanjaved.com/tools.html" id="hub-bubble" title="View All Tools" target="_blank" rel="noopener noreferrer">
+        <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <rect x="3" y="3" width="7" height="7"></rect>
+            <rect x="14" y="3" width="7" height="7"></rect>
+            <rect x="14" y="14" width="7" height="7"></rect>
+            <rect x="3" y="14" width="7" height="7"></rect>
+        </svg>
+    </a>
+    <!-- End of Snippet -->
 </body>
 </html>
